kubernetes/apps/notes-rag/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-rag
  namespace: notes-rag
  labels:
    app: notes-rag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-rag
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: notes-rag
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      automountServiceAccountToken: false
      containers:
        - name: notes-rag
          image: ghcr.io/davmacario/notes-rag:v1.2.1
          command:
            - notes-rag
            - --rebuild-on-start
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
            failureThreshold: 2
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 20
            failureThreshold: 3
          ports:
            - containerPort: 9099
              name: http
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 1024Mi # Peak at rebuild
          volumeMounts:
            - mountPath: /mnt/notes-rag/notes-cache
              subPath: notes-cache
              name: persistent-data
            - mountPath: /mnt/notes-rag/chroma-cache
              subPath: chroma-cache
              name: persistent-data
      volumes:
        - name: persistent-data
          persistentVolumeClaim:
            claimName: notes-rag-persistent
